--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "primeicons": "^4.1.0",
     "primevue": "^3.2.2",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^3.6.2"
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
